# go2_rl_ws

./: .gitignore  .gitmodules  Commands.txt  README.md  environment.yml  setup.bash
src/go2_launch/: CMakeLists.txt  package.xml
src/go2_launch/launch/: go2_nav_nodes.launch.py  go2_nav_nodes_jit.launch.py  go2_nav_nodes_onnx.launch.py  go2_obs_nodes.launch.py  go2_rough_walk_nodes_onnx.launch.py  go2_walk_nodes.launch.py  go2_walk_nodes_jit.launch.py  go2_walk_nodes_onnx.launch.py
src/go2_launch_walk/launch/: go2_obs_nodes.launch.py
src/go2_lidar_decoder/: package.xml  setup.cfg  setup.py
src/go2_lidar_decoder/go2_lidar_decoder/: go2_depth_map_visualizer.py  go2_height_map.py
src/go2_sdk_integration/: CMakeLists.txt  package.xml
src/go2_sdk_integration/src/: go2_ai_switcher.cpp  go2_audio_shut_off.cpp  go2_motion_shut_off.cpp  go2_motion_switcher.cpp  go2_motion_switcher_service.cpp  go2_sport_switcher.cpp
src/rl_deploy/: CMakeLists.txt  package.xml
src/rl_deploy/rl_deploy/: CMakeLists.txt
src/rl_deploy/rl_deploy/src/: go2_rl_control_cpp.cpp
src/rl_deploy/src/: go2_rl_control_cpp.cpp
src/rl_deploy_nav/: CMakeLists.txt  package.xml
src/rl_deploy_nav/src/: go2_rl_nav_cpp.cpp
src/rl_nav_ros_actions/: package.xml  setup.cfg  setup.py
src/rl_navigation/: package.xml  setup.cfg  setup.py
src/rl_navigation/rl_navigation/: go2_pose_command.py  go2_rl_nav_actions.py  go2_rl_nav_actions_jit.py  go2_rl_nav_actions_onnx.py
src/rl_navigation/share/models/: flat_nav_policy.onnx
src/unitree_ros2_python/: package.xml  setup.py
src/unitree_ros2_python/share/models/: flat_policy.onnx  flat_policy_v3.onnx  flat_policy_v6.onnx  flat_policy_v7.onnx  rough_policy_v1.onnx
src/unitree_ros2_python/unitree_ros2_python/: go2_base_ang_vel.py  go2_binary_foot_contacts.py  go2_controller_commands.py  go2_depth_map.py  go2_height_map.py  go2_height_map_visualizer.py  go2_joint_pos_vel.py  go2_motion_switcher.py  go2_projected_gravity.py  go2_rl_actions.py  go2_rl_actions_jit.py  go2_rl_actions_onnx.py  go2_rl_rough_actions_onnx.py  go2_velocity_commands.py  setup.cfg  setup.py
src/unitree_ros2_python/unitree_ros2_python/share/models/: flat_policy.onnx  flat_policy_low.onnx  flat_policy_v2.onnx  flat_policy_v5.onnx
src/unitree_ros2_python/unitree_ros2_python/unitree_ros2_python/: go2_base_vel.py  go2_projected_gravity.py  go2_rl_actions.py  go2_velocity_commands.py
